@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>202</width>
-    <height>307</height>
+    <width>223</width>
+    <height>385</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -27,20 +27,6 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <item row="0" column="0" >
-      <widget class="QLabel" name="label" >
-       <property name="text" >
-        <string>Id</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1" >
-      <widget class="QLabel" name="Id" >
-       <property name="text" >
-        <string>xxx</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0" >
       <widget class="QLabel" name="label_3" >
        <property name="text" >
@@ -58,8 +44,32 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="0" >
+      <widget class="QLabel" name="label" >
+       <property name="text" >
+        <string>Id</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1" >
+      <widget class="QLabel" name="Id" >
+       <property name="text" >
+        <string>xxx</string>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="1" >
       <widget class="QLineEdit" name="Longitude" />
+     </item>
+     <item row="3" column="1" >
+      <widget class="QComboBox" name="Amenity" />
+     </item>
+     <item row="3" column="0" >
+      <widget class="QLabel" name="label_5" >
+       <property name="text" >
+        <string>Amenity</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
